[package]
name = "bmfont"
edition = "2018"
version = "0.3.2"
authors = ["kalita.alexey <kalita.alexey@outlook.com>"]
description = "bitmap font config parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KalitaAlexey/bmfont-rust"
keywords = ["bitmap", "font"]

exclude = [
    "examples/*",
    "tests/*",
    "*.fnt",
    "*.png",
]

[dev-dependencies]
criterion = "0.3"
glium = "^0.16.0"
image = "^0.10.3"

[features]
default = ["parse-error"]
parse-error = []

[[bench]]
name = "parse"
harness = false