[package]
name = "bmfont"
edition = "2018"
version = "0.3.2"
authors = ["kalita.alexey <kalita.alexey@outlook.com>"]
description = "bitmap font config parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KalitaAlexey/bmfont-rust"
keywords = ["bitmap", "font"]

exclude = [
    "examples/*",
    "tests/*",
    "*.fnt",
    "*.png",
]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

# This is a dev-dependency, but those cannot be optional, so it's included here and not built by
# default. It is used with the serde feature unit tests.
serde_json = { version = "1", optional = true }

[dev-dependencies]
bmfont = { path = ".", features = ["serde", "serde_json"] }
glium = "^0.16.0"
image = "^0.10.3"
criterion = "0.3"

[features]
default = ["parse-error"]
parse-error = []

[package.metadata.docs.rs]
features = ["serde"]

[[bench]]
name = "parse"
harness = false
